<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/signupRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Create Profile"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/signup_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Full Name"
            android:layout_marginBottom="12dp" />

        <EditText
            android:id="@+id/signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="12dp" />

        <EditText
            android:id="@+id/signup_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Phone (optional)"
            android:inputType="phone"
            android:layout_marginBottom="18dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Continue as:"
            android:textStyle="bold"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/btnSignUpUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SIGN UP AS USER"
            android:layout_marginBottom="10dp" />


        <Button
            android:id="@+id/btnLoginAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="LOG IN AS ADMIN" />

    </LinearLayout>
</ScrollView>