<?xml version="1.0" encoding="utf-8"?>
<!--
author: Kenneth Joseph
Purpose: MainActivity.java
menu_entrant_bottom_nav.xml
Purpose: Defines bottom navigation items for the entrant app experience.

Tabs:
- Dashboard (nav_home)
- Events (nav_scan)  [repurposed placeholder for QR scan + event list]
- Notifications (nav_notifications)
- Profile (nav_profile)
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/dashboard_icon"
        android:title="Dashboard" />

    <!-- Keep id nav_scan, but repurpose as Events -->
    <item
        android:id="@+id/nav_events"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="Events" />

    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/notifications_icon"
        android:title="Notifications" />

    <!--  Organizer Dashboard -->
    <item
        android:id="@+id/nav_organizer"
        android:icon="@drawable/ic_clipboard"
        android:title="Organize events" />


    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile_placeholder_forstyledlayout"
        android:title="Profile" />

</menu>